--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <scene>
 <Viewpoint position="9.71617 -162.57712 79.22986" orientation="0.99761 -0.04055 -0.05594 1.49401" 
 	centerOfRotation="0.00000 0.00000 0.00000" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
-<inline url="https://raw.githubusercontent.com/dulcegalan/modelo/main/caryatides%2010k%20textura.x3d"> </inline>
+<inline "url= https://raw.githubusercontent.com/dulcegalan/modelo-3d/main/Texturizada.x3d" > </inline>
 </scene>
 </x3d>
 <p>
